# opt-vp

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  run-interactive.sh  run.sh  run_all.sh  run_all_add.sh  run_and_dot.sh  run_and_dot_riot.sh
sw/basic-c/: main.c
sw/trace-test-default/: main.S
sw/trace-test-memory/: main.S
sw/trace-test-minimal/: main.S
sw/trace-test-output-dep/: Makefile  main.S
sw/trace-test-prefix/: Makefile  main.S
vp/: CMakeLists.txt
vp/src/: CMakeLists.txt
vp/src/core/common/: CMakeLists.txt  elf_loader.h  instr.cpp  instr.h  trace.cpp  trace.h
vp/src/core/rv32/: CMakeLists.txt  csr.h  iss.cpp  iss.h  syscall.cpp  syscall.h
vp/src/core/rv64/: iss.h  mmu.h
vp/src/platform/basic/: main.cpp
vp/src/platform/common/: options.cpp  options.h
vp/src/platform/hifive/: hifive_main.cpp
vp/src/platform/hwitl/: main.cpp
vp/src/platform/linux/: linux_main.cpp
vp/src/platform/linux32/: linux32_main.cpp
vp/src/platform/microrv32/: main.cpp
vp/src/platform/test32/: test32_main.cpp
vp/src/platform/tiny32/: tiny32_main.cpp
vp/src/platform/tiny32-mc/: mc_main.cpp
vp/src/platform/tiny64/: tiny64_main.cpp
vp/src/platform/tiny64-mc/: mc_main.cpp
vp/src/scoring_functions/: CMakeLists.txt  scoring_functions.cpp
vp/src/util/: options.h
